--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,15 @@ body {
     font-weight: 500;
     font-size: 12px;
     line-height: 117%;
-
+    color: var(--main-black);
     margin: 0;
-    display: flex;
-    min-width: 320px;
-    min-height: 100vh;
+}
+
+.container {
+    max-width: 375px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 24px 20px;
+    background: var(--background-2);
 }
