--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-    font-family: Inter, sans-serif;
+    font-family:  'Inter', sans-serif;
 
     --main-black: #1d1e21;
     --accent: #59b17a;
@@ -28,6 +28,12 @@ a {
     cursor: pointer;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 img {
     display: block;
     max-width: 100%;
@@ -50,6 +56,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 24px 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     background: var(--background-2);
 }
