--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,15 +1,16 @@
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 999;
   display: flex;
   background: transparent;
   place-content: center;
   align-items: center;
+  justify-content: center;
   backdrop-filter: blur(10px); 
 }
 
