--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-    font-family:  'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
 
     --main-black: #1d1e21;
     --accent: #59b17a;
