--- a/src/components/AddProductModal/AddProductModal.module.css
+++ b/src/components/AddProductModal/AddProductModal.module.css
@@ -1,4 +1,4 @@
-.inputs{
+.inputs {
     display: flex;
     flex-direction: column;
     gap: 14px;
@@ -33,7 +33,8 @@
     color: var(--background-3);
     background: var(--accent);
     transition: background-color 0.3s ease-in-out;
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         background: var(--hover);
     }
 }
@@ -42,7 +43,8 @@
     border: 1px solid var(--accent);
     color: var(--accent);
     background: transparent;
-    transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out, color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out,
+        color 0.3s ease-in-out;
 }
 
 .deactive {
