--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -12,13 +12,15 @@
     background: var(--background-3);
     padding: 13px 18px;
     transition: border-color 0.3s ease-in-out;
-    &::placeholder{
+    &::placeholder {
         font-weight: 400;
         line-height: 150%;
         color: rgba(29, 30, 33, 0.4);
     }
     outline: none;
-    &:focus, &:hover, &:active{
+    &:focus,
+    &:hover,
+    &:active {
         border-color: var(--accent);
     }
 }
@@ -37,7 +39,8 @@
     transition: background-color 0.3s ease-in-out;
     line-height: 150%;
     color: var(--background-3);
-    &:hover, &:focus{
+    &:hover,
+    &:focus {
         background-color: var(--hover);
     }
 }
