--- a/src/components/LogoutBtn/LogoutBtn.module.css
+++ b/src/components/LogoutBtn/LogoutBtn.module.css
@@ -9,7 +9,8 @@
     justify-content: center;
     align-items: center;
     transition: background-color 0.3s ease-in-out;
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         background-color: var(--hover);
     }
 }
