--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 999;
+    z-index: 998;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -65,7 +65,8 @@ h3 {
     margin-bottom: 20px;
 }
 
-input, select {
+input,
+select {
     width: 100%;
     border: 1px solid rgba(29, 30, 33, 0.1);
     border-radius: 60px;
@@ -73,7 +74,9 @@ input, select {
     padding: 13px 18px;
     outline: none;
     transition: border-color 0.3s ease-in-out;
-    &:focus, &:hover, &:active {
+    &:focus,
+    &:hover,
+    &:active {
         border-color: var(--accent);
     }
 }
