--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -83,3 +83,10 @@
     stroke: var(--main-black);
     fill: transparent;
 }
+
+@media (min-width: 768px) {
+    .form {
+        margin-bottom: 276px;
+        max-width: 323px;
+    }
+}
