--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,16 @@ body {
     padding-right: 20px;
     background: var(--background-2);
 }
+
+@media (min-width: 768px) {
+    body {
+        font-size: 16px;
+        line-height: 112%;
+    }
+
+    .container {
+        max-width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+}
