--- a/src/components/ExpTable/ExpTable.module.css
+++ b/src/components/ExpTable/ExpTable.module.css
@@ -115,3 +115,50 @@
     color: var(--main-black);
     text-decoration: line-through;
 }
+
+@media (min-width: 768px) {
+    .caption {
+        font-size: 18px;
+        line-height: 133%;
+        padding: 20px;
+    }
+
+    .tableWrapper {
+        padding: 0 20px 0 20px;
+    }
+
+    .table {
+        width: unset;
+    }
+
+    .table th {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .table td {
+        width: auto;
+        font-size: 16px;
+        line-height: 112%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .table td:not(:first-child) {
+        padding-left: 20px;
+    }
+
+    .table td:not(:last-child) {
+        padding-right: 20px;
+    }
+
+    .table td:nth-child(2) {
+        width: 100%;
+    }
+
+    .status {
+        font-size: 14px;
+        padding: 4px 13px;
+        max-width: 80px;
+    }
+}
