--- a/src/components/CustomSelect/CustomSelect.module.css
+++ b/src/components/CustomSelect/CustomSelect.module.css
@@ -56,7 +56,7 @@
 }
 
 .customScrollbar {
-    width: 8px;
+    width: 6px;
     background-color: transparent;
     border-radius: 15px;
     position: relative;
@@ -114,4 +114,27 @@
     margin-top: 4px;
     left: 18px;
     bottom: -18px;
+}
+
+@media (min-width: 768px) {
+    .selectHeader {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 150%;
+        max-height: 44px;
+    }
+
+    .optionsWrapper {
+        top: calc(100% + 8px);
+    }
+
+    .placeholder {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 150%;
+    }
+
+    .option {
+        font-size: 12px;
+    }
 }
