--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -94,3 +94,32 @@ button[data-form] {
     line-height: 150%;
     outline: none;
 }
+
+@media (min-width: 768px) {
+    .modal {
+        padding: 40px;
+        max-width: 536px;
+    }
+    
+    .icon {
+        width: 26px;
+        height: 26px;
+    }
+    
+    h3 {
+        font-size: 24px;
+        line-height: 117%;
+        margin-bottom: 40px;
+    }
+    
+    input::placeholder {
+        font-weight: 400;
+        line-height: 150%;
+        color: rgba(29, 30, 33, 0.4);
+    }
+    
+    button[data-form] {
+        max-width: 133px;
+        line-height: 129%;
+    }
+}
