--- a/src/pages/AllOrdersPage/AllOrdersPage.module.css
+++ b/src/pages/AllOrdersPage/AllOrdersPage.module.css
@@ -2,3 +2,14 @@
     padding-top: 40px;
     padding-bottom: 20px;
 }
+
+@media (min-width: 768px) {
+    .wrapper {
+        padding-top: 50px;
+        padding-bottom: 32px;
+    }
+
+    .filterWrapper {
+        margin-bottom: 20px;
+    }
+}
