Add global desktop styles, add LoginPage desktop styles

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -90,3 +90,15 @@
         max-width: 323px;
     }
 }
+
+@media (min-width: 1440px) {
+    .form {
+        margin-bottom: unset;
+        margin-top: 279px;
+        width: 323px;
+    }
+
+    .inputs {
+        margin-bottom: 37px;
+    }
+}
