--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,11 @@ body {
         padding-right: 32px;
     }
 }
+
+@media (min-width: 1440px) {
+    .container {
+        max-width: 1440px;
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
