--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -1,3 +1,12 @@
 .wrapper {
     position: relative;
 }
+
+@media (min-width: 1440px) {
+    .contentWrapper{
+        display: flex;
+        .content {
+            width: 100%;
+        }
+    }
+}
