--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -104,3 +104,39 @@
         height: 16px;
     }
 }
+
+@media (min-width: 1440px) {
+    .sidebarOverlay {
+        width: 80px;
+        height: 100%;
+        background-color: transparent;
+        opacity: 1;
+        visibility: visible;
+        position: relative;
+        left: -40px;
+    }
+
+    .wrapper {
+        height: 100vh;
+        width: 80px;
+        padding: 0px 18px;
+        position: static;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        transform: translateX(0);
+        border-right: 1px solid rgba(29, 30, 33, 0.1);
+    }
+
+    .closeButton {
+        display: none;
+    }
+
+    .navLinks {
+        margin-top: 40px;
+    }
+
+    .logoutWrapper {
+        display: none;
+    }
+}
