Add desktop styles for non-dashboard pages, add fix to sidebar positioning

--- a/src/pages/AllCustomersPage/AllCustomersPage.module.css
+++ b/src/pages/AllCustomersPage/AllCustomersPage.module.css
@@ -13,3 +13,10 @@
         margin-bottom: 20px;
     }
 }
+
+@media (min-width: 1440px) {
+    .wrapper {
+        padding-top: 75px;
+        padding-bottom: 40px;
+    }
+}
