--- a/src/pages/AllProductsPage/AllProductsPage.module.css
+++ b/src/pages/AllProductsPage/AllProductsPage.module.css
@@ -68,3 +68,10 @@
         font-size: 27px;
     }
 }
+
+@media (min-width: 1440px) {
+    .wrapper {
+        padding-top: 75px;
+        padding-bottom: 40px;
+    }
+}
