--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -111,6 +111,7 @@
         height: 100%;
         background-color: transparent;
         opacity: 1;
+        z-index: 1;
         visibility: visible;
         position: relative;
         left: -40px;
