--- a/src/pages/AllOrdersPage/AllOrdersPage.module.css
+++ b/src/pages/AllOrdersPage/AllOrdersPage.module.css
@@ -13,3 +13,14 @@
         margin-bottom: 20px;
     }
 }
+
+@media (min-width: 1440px) {
+    .wrapper {
+        padding-top: 75px;
+        padding-bottom: 40px;
+    }
+
+    .paginationDots {
+        margin-bottom: unset;
+    }
+}
