--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -84,6 +84,20 @@
     fill: transparent;
 }
 
+.toggleForm {
+    display: block;
+    margin: 20px auto;
+    background: transparent;
+    border: none;
+    font-size: 14px;
+    line-height: 129%;
+    color: var(--main-black);
+    &:hover,
+    &:focus {
+        text-decoration: underline;
+    }
+}
+
 @media (min-width: 768px) {
     .form {
         margin-bottom: 276px;
